[package]
name = "imgui-rs-vulkan-renderer"
description = "A Vulkan renderer for imgui-rs using Ash."
readme = "README.md"
keywords = ["imgui", "vulkan", "ash"]
homepage = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
repository = "https://github.com/adrien-ben/imgui-rs-vulkan-renderer"
documentation = "https://docs.rs/imgui-rs-vulkan-renderer"
license = "MIT"
version = "1.8.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2018"

exclude = [
    "assets/*",
    "compile_shaders.*"
]

[dependencies]
thiserror = "1.0"
log = "0.4"
imgui = "^0.12"
ash = { version = "0.37", default-features = false, features = ["debug"] }
ultraviolet = "0.9"
gpu-allocator = { version = "0.22", default-features = false, features = ["vulkan"], optional = true }
vma = { version = "0.3", optional = true }

[features]
default = ["vma"]
dynamic-rendering = []
